feat[quickreplace]: WIP add basic funcions

--- a/quickreplace/Cargo.toml
+++ b/quickreplace/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "quickreplace"
 version = "0.1.0"
-authors = "tananh691@gmail.com"
 edition = "2021"
+authors = ["Tan Anh <tananh691@gmail.com>"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
